@@ -1,3 +1,9 @@
+2007-01-08  Wang Xin  <jedy.wang@sun.com>
+
+	Fixes #389961
+	* gui/e-cal-model.c:(e_cal_model_set_instance_times):
+	Check if the item is a event before processing the end time.
+
 2006-12-04  Matthew Barnes  <mbarnes@redhat.com>
 
 	Fixes bug #357970
